Overflow fix

--- a/sass/gutenberg-editor-styles.scss
+++ b/sass/gutenberg-editor-styles.scss
@@ -35,6 +35,9 @@
 
 // Editor exceptions below
 // These styles are NO USE to front-end
+.editor-styles-wrapper {
+  overflow-x: hidden;
+}
 
 // Fix alignleft and alignright figcaption width
 // Hack for achieving the same than in gutenberg-helpers.js
